Armature, pose mode, Clear user transforms reset all despite «only selected» option #78994

Closed
opened 2020-07-16 15:38:48 +02:00 by Vyacheslav Kobozev · 10 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-16 00:24, hash: 75a09ba2ed

Short description of error
2020-07-16_16-37-45.mp4

It is strange, that it works same way in 2.79
Papercut? Wrong description?
Tooltip says, that this options for selected bones,

to reproduce
Add armature with 2 bones,
enter pose mode,
change rotation of both bones,
select only one,
clear user transforms with «only selected option»
both bones resetted instead selected one.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-16 00:24, hash: `75a09ba2ed` **Short description of error** [2020-07-16_16-37-45.mp4](https://archive.blender.org/developer/F8699217/2020-07-16_16-37-45.mp4) It is strange, that it works same way in 2.79 Papercut? Wrong description? Tooltip says, that this options for selected bones, **to reproduce** Add armature with 2 bones, enter pose mode, change rotation of both bones, select only one, clear user transforms with «only selected option» both bones resetted instead selected one.

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this, the "Only Selected" property seems to do nothing. It even clears transforms of unconnected bones, they don't have to be parents.

EDIT: It actually appears this only happens when the bones aren't keyframed. (There is no keyframe to reset their transforms to).

I can confirm this, the "Only Selected" property seems to do nothing. It even clears transforms of unconnected bones, they don't have to be parents. EDIT: It actually appears this only happens when the bones aren't keyframed. (There is no keyframe to reset their transforms to).

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

@Vyach Please write an actual short description of the problem. Not only is this much faster for people to digest than a video, it's also allows a search engine to understand what you've written, making it possible for others with the same issue to find your report (instead of filing a duplicate report).

Also fill out the 'Blender Version: Worked' field by testing with older Blender versions. That'll give some very useful information on whether this has "always" been an issue, or whether it was recently introduced.

@Vyach Please write an actual short description of the problem. Not only is this much faster for people to digest than a video, it's also allows a search engine to understand what you've written, making it possible for others with the same issue to find your report (instead of filing a duplicate report). Also fill out the 'Blender Version: Worked' field by testing with older Blender versions. That'll give some very useful information on whether this has "always" been an issue, or whether it was recently introduced.

@dr.sybren
I made text version of instruction.
And title describes problem.

@dr.sybren I made text version of instruction. And title describes problem.

This issue was referenced by d42530824e

This issue was referenced by d42530824e434fcc4c8d5394dd65f44cf3e8c16f
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Hans Goudey self-assigned this 2020-07-21 15:51:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78994
No description provided.